# ludicolo

./: README.md  pyproject.toml
ludicolo/: fetch_images.py
